Fixing issue on mobile

--- a/src/CSS/landing-page.css
+++ b/src/CSS/landing-page.css
@@ -9,6 +9,7 @@ html {
     padding: 0;
     height: 100%;
     width: 100%;
+    max-width: 100%;
     background-color: #2d2d2d;
     font-family: "Ubuntu", sans-serif;
     color: white;
@@ -18,6 +19,8 @@ html {
 .landing-page {
     text-align: left;
     /* height: 100vh; */
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .landing-main {
